do-not-recompute-custody-and-sampling-indices